[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "openai>=1.99.3",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==20.3",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
